--- a/TestRunner.xcodeproj/xcshareddata/xcschemes/TestRunner.xcscheme
+++ b/TestRunner.xcodeproj/xcshareddata/xcschemes/TestRunner.xcscheme
@@ -67,11 +67,19 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-run-tests false"
-            isEnabled = "YES">
+            argument = "-clean false"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-retry-count 2"
+            argument = "-build-tests false"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-run-tests false"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-retry-count 0"
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
@@ -80,10 +88,6 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-timeout 30"
-            isEnabled = "YES">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "-build-tests false"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
@@ -100,7 +104,7 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-partitions-count 6"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-partitions-count 2"
@@ -108,23 +112,27 @@
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-partition 0"
-            isEnabled = "YES">
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-simulators-count 4"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-simulators-count 2"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-simulators-count 3"
-            isEnabled = "NO">
-         </CommandLineArgument>
-         <CommandLineArgument
-            argument = "-devices &quot;iPhone 4s, iOS 9.2&quot;"
-            isEnabled = "NO">
+            argument = "-devices &quot;iPhone 5, iOS 9.2&quot;"
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-devices &quot;iPhone 5, iOS 9.2;iPad 2, iOS 9.2&quot;"
-            isEnabled = "YES">
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-devices &quot;iPhone 5, iOS 9.3;iPad 2, iOS 9.3&quot;"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-scheme &quot;MyTestProject&quot;"
@@ -135,6 +143,23 @@
             isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "TOOLCHAINS"
+            value = "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "DEVELOPER_DIR"
+            value = "/Applications/Xcode7.2.app/Contents/Developer"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "XCODE_DEFAULT_TOOLCHAIN_OVERRIDE"
+            value = "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
