--- a/TestRunner.xcodeproj/xcshareddata/xcschemes/TestRunner.xcscheme
+++ b/TestRunner.xcodeproj/xcshareddata/xcschemes/TestRunner.xcscheme
@@ -63,7 +63,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-workspace &quot;/Users/stephan/projects/ios/gospellibrary/GospelLibrary.xcworkspace&quot;"
+            argument = "-workspace &quot;/Users/rhett/Developer/Source/LDSMediaLibrary-iOS/LDSMediaLibrary.xcworkspace&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
@@ -75,16 +75,16 @@
             isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-scheme &quot;GospelLibrary&quot;"
+            argument = "-scheme &quot;LDSMediaLibrary&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-target &quot;GospelLibraryIntegrationTests&quot;"
+            argument = "-target &quot;LDSMediaLibraryUITests&quot;"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-target &quot;GospelLibraryUITests&quot;"
-            isEnabled = "NO">
+            argument = "-target &quot;LDSMediaLibraryTests&quot;"
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-project &quot;/Users/stephan/projects/ios/TestRunner/MyTestProject/MyTestProject.xcodeproj&quot;"
